how to apply image tag

--- a/source/index.slim
+++ b/source/index.slim
@@ -1,28 +1,40 @@
-h1 Hi
-ul.small-block-grid-3
-  li
+div#conteneur
+  h1#header
     a(
-      href = "http://placehold.it"
+      href="#"
+      title="Colored Design - Accueil"
     )
-      img(
-        src = "http://placehold.it/350x250"
-      )
-  li
-    a(
-      href = "http://placehold.it"
-    )
-      img(
-        src = "http://placehold.it/350x250"
-      )
-  li
-    a(
-      href = "http://placehold.it"
-    )
-      img(
-        src = "http://placehold.it/350x250"
-      )
-
-.row.my
-  img(
-    src = "http://placehold.it/350x250"
-  )
+      | Colored Design
+  nav
+    ul
+      li
+        a(
+          href="#"
+        )
+          | etape 1
+      li
+        a(
+          href="#"
+        )
+          | etape 2
+      li
+        a(
+          href="#"
+        )
+          | etape 3
+      li
+        a(
+          href="#"
+        )
+          | etape 4
+      li
+        a(
+          href="#"
+        )
+          | etape 5
+  div#contenu
+    h2 un titre
+    p
+      =lorem.paragraph
+  footer
+    | Réalisation des codes HTML/CSS, du tutoriel et du design par RObledDad
