use some awesome fonts

--- a/source/partials/_meta.slim
+++ b/source/partials/_meta.slim
@@ -3,4 +3,6 @@ meta http-equiv="content-type" content="text/html;charset=utf-8"
 /
   = stylesheet_link_tag "foundation-5.2.3/css/foundation.css"
 = stylesheet_link_tag "index"
-= javascript_include_tag "angular"
+/
+  = javascript_include_tag "angular"
+= javascript_include_tag "app"
