--- a/source/index.slim
+++ b/source/index.slim
@@ -1,40 +1,11 @@
-div#conteneur
-  h1#header
-    a(
-      href="#"
-      title="Colored Design - Accueil"
-    )
-      | Colored Design
-  nav
-    ul
-      li
-        a(
-          href="#"
-        )
-          | etape 1
-      li
-        a(
-          href="#"
-        )
-          | etape 2
-      li
-        a(
-          href="#"
-        )
-          | etape 3
-      li
-        a(
-          href="#"
-        )
-          | etape 4
-      li
-        a(
-          href="#"
-        )
-          | etape 5
-  div#contenu
-    h2 un titre
-    p
-      =lorem.paragraph
-  footer
-    | Réalisation des codes HTML/CSS, du tutoriel et du design par RObledDad
+h1#big Progress Bar
+p
+  progress(
+    value = "1"
+    max   = "100"
+  )
+
+  button(
+    onclick="progress()"
+  )
+    | show progress
