--- a/source/assets/stylesheets/index.sass
+++ b/source/assets/stylesheets/index.sass
@@ -1,13 +1,21 @@
 @font-face 
   font-family: 'myfont'
-  src: font_url('LearningCurve_OT.otf')
+  src: font_url('dayrom.ttf')
 @font-face 
   font-family: 'mysvg'
   src: font_url('LearningCurve_OT.otf')
 h1#big 
-  font-family: 'mysvg'
+  font-family: 'myfont'
   text-align: center
-  background-color: #FF0
+  background-color: #CFB036
 div#petit
   height: 200px
   width: 100px
+h2
+  font-family: 'mysvg'
+  text-align: center
+  font-size: 1.8em
+  color: green
+button
+  font-family: 'myfont'
+  font-size: 1.8em
